# practica-grupal-kobuki

./: README.md  package.xml
HUGO/cfg/: tags_36h11.yaml
HUGO/launch/: camera_36h11.launch.yml
HUGO/photo/: CMakeLists.txt  package.xml
HUGO/photo/include/photo/: image_saver.hpp
HUGO/photo/src/: main.cpp
HUGO/photo/src/photo/: image_saver.cpp
MATEO/practica/: package.xml
MATEO/practica/include/practica/: ButtonNode.hpp
MATEO/practica/src/practica/: ButtonNode.cpp
MATEO/practica_grupal/practica/: CMakeLists.txt
MATEO/practica_grupal/practica/include/practica/: ButtonNode.hpp
MATEO/practica_grupal/practica/src/: button_main.cpp
MATEO/practica_grupal/practica/src/practica/: ButtonNode.cpp
ROBERTO/: CMakeLists.txt  CMakelists.txt  library.xml  package.xml
ROBERTO/PRUEBA_PRACTICA/prueba/: CMakeLists.txt  package.xml
ROBERTO/PRUEBA_PRACTICA/prueba/behaviorTree/: bt.xml
ROBERTO/PRUEBA_PRACTICA/prueba/include/prueba/: B0Pressed.hpp  B1Pressed.hpp  B2Pressed.hpp  GetWaypoint.hpp  Move.hpp  ShowList.hpp
ROBERTO/PRUEBA_PRACTICA/prueba/include/prueba/ctrl_support/: BTActionNode.hpp
ROBERTO/PRUEBA_PRACTICA/prueba/src/: main.cpp
ROBERTO/PRUEBA_PRACTICA/prueba/src/prueba/: B0Pressed.cpp  B1Pressed.cpp  B2Pressed.cpp  GetWaypoint.cpp  Move.cpp  ShowList.cpp
ROBERTO/bt.xml/: library.xml
ROBERTO/bt_xml/: library.xml
ROBERTO/config/: params.yaml
ROBERTO/include/: IsRegistered.h  Search.h
ROBERTO/include/library_lib/: IsRegistered.hpp  NavObjective.hpp  NavOdom.hpp  Search.hpp  StoreObject.hpp
ROBERTO/include/library_lib/ctrl_support/: BTActionNode.hpp
ROBERTO/launch/: guide_kobuki.launch.py
ROBERTO/src/: guide_nav_main.cpp
ROBERTO/src/library_lib/: IsRegistered.cpp  NavObjective.cpp  NavOdom.cpp  Search.cpp  StoreObject.cpp
bt.xml/: library.xml
